Alignment Edit of Entries top, Header Footer width fix

--- a/Design Assignment 1A-home-search (TuTangle Design)/css/layout.css
+++ b/Design Assignment 1A-home-search (TuTangle Design)/css/layout.css
@@ -14,6 +14,8 @@
 
 .header-section{
    background-color: #7dd9e8;
+   min-width: 1032px;
+   
 
 }
 
@@ -56,6 +58,7 @@
 .navbar-section{
     width: 100%;
     background-color: #f5f5f5;
+    min-width: 1032px;
 }
 
 .navbar{
@@ -68,11 +71,12 @@
 .topic, .friendreq{
     float: left;
     font-family: sans-serif;
+    vertical-align: center;
     width: 156px;
     font-size: 13px;
 }
 
-.friendreq span{
+.friend{
     color: rgb(136, 133, 133);
 
 }
@@ -82,8 +86,18 @@
 }
 
 .topic img, .friendreq img{
-    margin-top: 2px;
+    margin-top: 0px;
     margin-right: 8px;
+}
+
+.nav-right{
+    position: relative;
+    padding-bottom: 2px;
+    vertical-align: center;
+}
+
+.nav-right li{
+    float: left;
 }
 
 
@@ -108,6 +122,7 @@
 
 
 
+
 /* Entries Section */
 
 .entries-title{
@@ -118,13 +133,14 @@
     height: 100%;
     float: left;
     margin-left: 28px;
-    margin-right: 15px;
+    margin-right: 5px;
    
 }
 
 .entries-top{
     width: 524px;
     height: 66px;
+    text-align: center;
 
 }
 
@@ -161,20 +177,31 @@
     background-image: url(../images/all-members.png);
 }
 
+.all-members a{
+    padding-top: 8px;
+
+}
+
 .entries-other:hover{
     background-image: url(../images/all-members.png);
 }
 
+.entries-top a{
+    font-size: 12px;
+}
+
 .entries-other{
-    text-align: center;
     float: right;
-    font-size: 15px;
     margin-top: 13px;
     width: 113px;
     height: 28px;
-    margin-right: 13px;
-    background-image: url(../images/entries-bg.png) ;
+    margin-right: 10px;
+    background-image: url(../images/entries-bg.png)  ;
 
+}
+.entries-other a{
+    padding-top: 8px;
+    
 }
 
 .left-title, .right-title{
@@ -190,7 +217,7 @@
     height: 85px;
     padding-top: 13px ;
     margin-bottom: 10px;
-    border-bottom: 2px rgb(133, 130, 130) solid;
+    border-bottom: 1px rgb(133, 130, 130) solid;
 
 }
 
@@ -218,6 +245,7 @@
 
 .footer-section{
     background-color: #868686 ;
+    min-width: 1032px;
 
 }
 
